# ChessGame

./: Chess Board.xlsx  Chess_Board.csv  README  README.md  board.py  clickable_label.py  computer_player.py  game_board.py  gui.py  helper.py  human_player.py  main.py  pawn.py  piece.csv  piece.py  pieces.py  place_pieces.py  player.py
Pieces/bishops/: bishop_helper.py
Pieces/bishops/black/: black_bishop.py
Pieces/bishops/white/: white_bishop.py
Pieces/empty/: empty.py
Pieces/kings/: king_helper.py
Pieces/kings/black/: black_king.py
Pieces/kings/white/: white_king.py
Pieces/knights/: knight_helper.py
Pieces/knights/black/: black_knight.py
Pieces/knights/white/: white_knight.py
Pieces/pawns/black/: black_pawn.py
Pieces/pawns/white/: white_pawn.py
Pieces/piece_helpers/: helpers.py
Pieces/queens/: queen_helper.py
Pieces/queens/black/: black_queen.py
Pieces/queens/white/: white_queen.py
Pieces/rooks/: rooks_helper.py
Pieces/rooks/black/: black_rook.py
Pieces/rooks/white/: white_rook.py
black_pieces/bishop/: black_bishop.py
black_pieces/king/: black_king.py
black_pieces/pawn/: black_pawn.py
black_pieces/queen/: black_queen.py
black_pieces/rook/: black_rook.py
tests/: test_BP.py  test_BP_take_piece.py  test_WP.py  test_WP_take_piece.py  test_pieces.py
vo_epipolar_project/: CMakeLists.txt
vo_epipolar_project/src/: vo_epipolar.cpp
white_pieces/king/: white_king.py
white_pieces/knight/: white_knight.py
white_pieces/pawn/: white_pawn.py
white_pieces/queen/: white_queen.py
white_pieces/rook/: white_rook.py
(+26 files in other folders)
